# myareareport

./: .env.example  .gitignore  Dockerfile  PROMPTS.md  README.md  build.md  package-lock.json  package.json  report.md  task.md  vite.config.js
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  errors.py  logging_config.py  main.py  observability.py
apps/api/app/cache/: redis_cache.py
apps/api/app/models/: air_quality.py  area.py  crime.py  flood.py  house_prices.py  planning.py  report.py  stop_search.py
apps/api/app/providers/: defra_erg.py  environment_agency.py  land_registry.py  mock_planning.py  open_aq.py  planning_base.py  planning_data_gov_uk.py  police_uk.py  postcodes_io.py  sensor_community.py
apps/api/app/routers/: air_quality.py  area.py  crime.py  flood.py  health.py  house_prices.py  planning.py  report.py  stop_search.py
apps/api/app/services/: air_quality_service.py  area_service.py  crime_service.py  flood_service.py  house_prices_service.py  planning_service.py  report_service.py  stop_search_service.py
apps/api/app/summaries/: crime_summary.py  flood_summary.py  planning_summary.py
apps/api/tests/: test_area.py  test_crime.py  test_flood.py  test_health.py  test_planning.py  test_report.py  test_summaries.py
apps/mcp/: Dockerfile  pyproject.toml  response_helpers.py  server.py
apps/mcp/tests/: test_tools.py
apps/mcp/tools/: __init__.py  area_summary.py  briefing.py  compare_areas.py  compare_list.py  crime_stats.py  explain_dataset.py  flood_risk.py  planning_activity.py  stop_search.py
docs/: UI.md  demo-script.md  (+9 more)
(+111 files in other folders)
